[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/img/porte.png" type="Texture" id=1]
[ext_resource path="res://assets/img/mockup_menu.png" type="Texture" id=2]
[ext_resource path="res://src/Menu.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/Item_Chest_Opening_01.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/PixelOperator.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/img/livre_hd.png" type="Texture" id=6]
[ext_resource path="res://assets/renner/Renner_ 400 Book.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/audio/Papers 3.mp3" type="AudioStream" id=8]
[ext_resource path="res://src/Tuto.tscn" type="PackedScene" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.0
height = 6.0

[sub_resource type="Animation" id=2]
resource_name = "open_door"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, -0.5 ),
"update": 0,
"values": [ 0, 7 ]
}

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 7 )

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Porte" type="Sprite" parent="Sprite"]
position = Vector2( 118, 98 )
texture = ExtResource( 1 )
centered = false
hframes = 8

[node name="Area2D" type="Area2D" parent="Sprite/Porte"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Porte/Area2D"]
position = Vector2( 11, 11 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite/Porte"]
anims/open_door = SubResource( 2 )

[node name="door" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Credits" type="Button" parent="."]
margin_left = 177.0
margin_top = 106.0
margin_right = 235.0
margin_bottom = 128.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 0.882353, 1 )
custom_colors/font_color_hover = Color( 0.137255, 0.352941, 0.388235, 1 )
custom_fonts/font = SubResource( 3 )
text = "Credits"
flat = true

[node name="Label" type="Label" parent="."]
margin_left = 123.0
margin_top = 119.0
margin_right = 134.0
margin_bottom = 135.0
custom_colors/font_color = Color( 1, 1, 0.882353, 1 )
custom_fonts/font = SubResource( 4 )
text = "^"
align = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Sprite2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 26, 6 )
scale = Vector2( 0.14, 0.14 )
texture = ExtResource( 6 )
centered = false

[node name="CloseBook" type="Button" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
flat = true

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 63.0
margin_top = 30.0
margin_right = 128.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 5 )
text = "Code: 
astonedf & Dax

Art: 
Jess & Dax
"

[node name="Label2" type="Label" parent="CanvasLayer"]
margin_left = 147.0
margin_top = 18.0
margin_right = 212.0
margin_bottom = 138.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 5 )
text = "Sounds:
From bundles

Music:
astonedf

Cover Art: 
Sar

"
__meta__ = {
"_editor_description_": ""
}

[node name="Book" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="TutoButton" type="Button" parent="."]
margin_left = 8.0
margin_top = 61.0
margin_right = 71.0
margin_bottom = 83.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 0.882353, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.592157, 0.439216, 1 )
custom_fonts/font = SubResource( 3 )
text = "Tutorial"
flat = true

[node name="Tuto" parent="." instance=ExtResource( 9 )]
visible = false

[connection signal="mouse_entered" from="Sprite/Porte/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/Porte/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CanvasLayer/CloseBook" to="." method="_on_CloseBook_pressed"]
[connection signal="pressed" from="TutoButton" to="." method="_on_TutoButton_pressed"]
